added pics + fixed section 3

--- a/section-1.html
+++ b/section-1.html
@@ -52,10 +52,10 @@
 									<header class="style1">
 										<h2>Transportation, Political Authority,<br class="mobile-hide" />
 										and Religious Life</h2>
-										<p>Tempus feugiat veroeros sed nullam dolore</p>
 									</header>
+									
 									<a href="#" class="image featured">
-										<img src="images/polnreligion.png" alt="" />  <!--Change image-->
+										<img src="images/section1.jpg" alt="" />  <!--Change image-->
 									</a>
 									<p>In the pre-colonial Philippines, transportation shaped both political authority and spiritual life. 
 										Leadership depended heavily on mobility and control of the waterways, as communities were connected 
