--- a/section-2.html
+++ b/section-2.html
@@ -52,10 +52,9 @@
 									<header class="style1">
 										<h2>Maritime Mobility<br class="mobile-hide" />
 										and Economic-Social Networks</h2>
-										<p>Tempus feugiat veroeros sed nullam dolore</p>
 									</header>
 									<a href="#" class="image featured">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/section2.jpg" alt="" />
 									</a>
 									<p>In the pre-colonial Philippines, it has been established that 
 										maritime transportation dominated daily life due to the natural 
