--- a/section-3.html
+++ b/section-3.html
@@ -53,10 +53,9 @@
 								<h2>
 									Culture and Technology in a Maritime Environment<br class="mobile-hide" />
 								</h2>
-								<p></p>
 							</header>
 							<a href="#" class="image featured">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="images/section3.jpg" alt="" />
 							</a>
 							<p class="infotext">
 								In the pre-colonial Philippines, transportation shaped both political authority and
@@ -68,10 +67,11 @@
 								rested in the hands of the datu, who exercised power within small but independent
 								communities connected by water routes.
 							</p>
-							<p class="quote">
+							<blockquote>
 								“This people always had chiefs, called by them datos, who governed them and were
-								captains in their wars, and whom they obeyed and reverenced.” <br />- Plasencia
-							</p>
+								captains in their wars, and whom they obeyed and reverenced.”
+								<cite>(Plasencia)</cite>
+							</blockquote>
 							<p class="infotext">
 								Antonio de Morga further noted that natives “make use of those craft for trading among
 								the islands,” which shows that commerce is driven by mobility, and that alliances and
@@ -79,15 +79,17 @@
 								expeditions strengthened his status, due to the close ties of leadership to resource
 								access and networks of exchange with leaders from other communities.
 							</p>
-							<p class="quote">
+							<blockquote>
 								“Those chiefs possessed a great amount of gold, and slaves in proportion to their
-								nobility.”<br />- Bobadilla
-							</p>
-							<p class="quote">
+								nobility.”
+								<cite>(Bobadilla)</cite>
+							</blockquote>
+							<blockquote>
 								“The chiefs in some villages had also fisheries, with established limits, and sections
 								of the rivers for markets. At these no one could fish, or trade… without paying for the
-								privilege…”<br />- Plasencia
-							</p>
+								privilege…”
+								<cite>(Plasencia)</cite>
+							</blockquote>
 							<p class="infotext">
 								In addition to authority and power, religious life is just as embedded in this maritime
 								setting. Juan de Plasencia’s <b>Customs of the Tagalogs</b> documented that many natives
@@ -101,15 +103,17 @@
 								through movement, as accounts describe natives keeping “their ancient lore through
 								songs… commonly while playing their oars.”
 							</p>
-							<p class="quote">
+							<blockquote>
 								“They also worshipped the stones, rocks, reefs, and promontories of land which jut into
 								the sea; and made offerings to those of rice, fish, and other like things, or fire their
-								arrows at them in passing.”<br />- Bobadilla
-							</p>
-							<p class="quote">
+								arrows at them in passing.”
+								<cite>(Bobadilla)</cite>
+							</blockquote>
+							<blockquote>
 								“Although they had no temples, they had men and women who acted as priests, who were
-								called catalonan by some and babailan by others.”<br />- Plasencia
-							</p>
+								called catalonan by some and babailan by others.”
+								<cite>(Plasencia)</cite>
+							</blockquote>
 							<p class="infotext">
 								While chroniclers described political structures and spiritual practices as separate
 								entities, the cited accounts reveal a deeper connection: authority, belief, and
